--- a/style_media.css
+++ b/style_media.css
@@ -1,19 +1,27 @@
+:root{
+  --icon-width: 15%;
+  --font-size: clamp(0.4rem, 0.8rem, 1rem);
+}
+
 @media screen and (max-width: 1024px) {
-  .score-field {
-    font-size: 0.9rem;
-  }
+   .score-field {
+      width: var(--score-width);
+      font-size: var(--font-size);
+    }
 .game-screen {
   width: var(--game-width);
   height: var(--game-width);
   padding: 5vmin 0;
   position: relative;
 }
+.instruction-overlay {
+  font-size: var(--font-size);
+}
 }
 
 
 @media screen and (max-width: 768px){
   .instruction-overlay {
-    /* font-size: 0.95rem;*/
     font-size: var(--font-size);  
   }
   #snake-logo{
@@ -33,22 +41,24 @@
 
 @media screen and (max-width: 480px) {
     .score-field img{
-
-    width: 0.5rem;
-    height: 1rem;
+    /* width: 0.5rem;
+    height: 1rem; */
+    width: var(--icon-width);
+    height: var(--icon-width);
+    }
+    .score-field {
+      padding: 0;
+      height: 10%;
+      width: var(--score-width);
+      font-size: var(--font-size);
     }
     #snake-logo{
     width:7.5rem;
     height: 6rem;
     }
-    .instruction{
-    font-size:0.4rem ;
-    }
-    .score-field {
-    padding: 0;
-    height: 10%;
-    font-size: 0.5rem;
-    }
+.instruction{
+  font-size: 0.5rem;
+}
     .settings-panel {
     flex-direction: column;
     }
@@ -57,21 +67,17 @@
 
 @media screen and (max-width: 320px){
     .score-field img{
-    width: 0.5rem;
-    height: 1rem;
+    width: var(--icon-width);
+    height: var(--icon-width);
     }
     #snake-logo{
     width:7.5rem;
     height: 6rem;
     }
     .instruction{
-    font-size:0.4rem ;
-    }
-    .score-field {
-    font-size: 0.5rem;
+    font-size:0.3rem;
     }
     .settings-panel {
-    
     flex-direction: column;
     }
 }
